[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathfinding = "4.1.1"
rayon = "1.6.1"
regex = "1.7.0"

[[bin]]
name = "day01"
path = "src/day01/main.rs"

[[bin]]
name = "day02"
path = "src/day02/main.rs"

[[bin]]
name = "day03"
path = "src/day03/main.rs"

[[bin]]
name = "day04"
path = "src/day04/main.rs"

[[bin]]
name = "day05"
path = "src/day05/main.rs"

[[bin]]
name = "day06"
path = "src/day06/main.rs"

[[bin]]
name = "day07"
path = "src/day07/main.rs"

[[bin]]
name = "day08"
path = "src/day08/main.rs"

[[bin]]
name = "day09"
path = "src/day09/main.rs"

[[bin]]
name = "day10"
path = "src/day10/main.rs"

[[bin]]
name = "day11"
path = "src/day11/main.rs"

[[bin]]
name = "day12"
path = "src/day12/main.rs"

[[bin]]
name = "day13"
path = "src/day13/main.rs"

[[bin]]
name = "day14"
path = "src/day14/main.rs"

[[bin]]
name = "day15"
path = "src/day15/main.rs"

[[bin]]
name = "day16"
path = "src/day16/main.rs"

[[bin]]
name = "day17"
path = "src/day17/main.rs"

[[bin]]
name = "day18"
path = "src/day18/main.rs"

[[bin]]
name = "day19"
path = "src/day19/main.rs"

[[bin]]
name = "day20"
path = "src/day20/main.rs"

[[bin]]
name = "day21"
path = "src/day21/main.rs"

[[bin]]
name = "day22"
path = "src/day22/main.rs"
